--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,5 @@ language: ruby
 rvm:
  - 2.3.0
 script:
-  - RAILS_ENV=test bundle exec rake db:schema:load --trace
-  - bundle exec rake db:test:prepare
+  - bin/rails db:migrate RAILS_ENV=test
   - bundle exec rspec spec/
