--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
+sudo: required
 addons:
   firefox: "45.0"
 language: ruby
 rvm:
  - 2.3.0
-before_script:
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
+before_install:
+  - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
 script:
   - bin/rails db:migrate RAILS_ENV=test
   - bin/rails db:seed RAILS_ENV=test
